ServiceRegistryConnection impl
